--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,6 @@ spring.jpa.open-in-view=false
 jwt.secret=${JWT_SECRET}
 jwt.access-token.expiration=86400000 
 
-frontend.url=https://yourfrontend.com
 
 
 spring.jpa.hibernate.ddl-auto=update
@@ -37,6 +36,8 @@ spring.servlet.multipart.max-request-size=20MB
 cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
 cloudinary.api_key=${CLOUDINARY_API_KEY}
 cloudinary.api_secret=${CLOUDINARY_API_SECRET}
+
+frontend.url=http://localhost:8081/
 
 
 
