action file updated

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - main
+      - dockerSetup
   pull_request:
     branches:
       - main
+      - dockerSetup
 
 jobs:
   build:
