--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
 cloudinary.api_key=${CLOUDINARY_API_KEY}
 cloudinary.api_secret=${CLOUDINARY_API_SECRET}
 
-frontend.url=http://localhost:8081/
+frontend.url=http://localhost:8080/api/v1/auth/
 
 
 
