--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,8 @@ spring.jpa.open-in-view=false
 jwt.secret=${JWT_SECRET}
 jwt.access-token.expiration=86400000 
 
-
+spring.redis.host=localhost
+spring.redis.port=6379
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
