--- a/.github/workflows/backend_ci_cd.yml
+++ b/.github/workflows/backend_ci_cd.yml
@@ -11,7 +11,25 @@ on:
       - dockerSetup
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: "17"
+          distribution: "temurin"
+          cache: maven
+
+      - name: Run tests with Maven
+        run: ./mvnw test
+
   build:
+    needs: test
     runs-on: ubuntu-latest
 
     steps:
@@ -27,6 +45,7 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dockerSetup'
 
     steps:
       - name: Checkout code
@@ -51,4 +70,3 @@ jobs:
           script: |
             cd ~/Business-Connect
             docker compose up -d --build backend
-
